ParserManager: getFirst -> get(0)